# api_python_requests_qaguru_17

./: README.md  pyproject.toml
tests/: reques_service_api_test.py  tests_reques.py
