[tool.poetry]
name = "api-python-requests-qaguru-17"
version = "0.1.0"
description = "api_python_requests_qaguru_17"
authors = ["Eugene Evdokimenko <eugene.qa94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
jsonschema = "^4.23.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
